--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.8.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -31,12 +32,15 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.8.6",
-    "react-native-youtube": "^2.0.2"
+    "react-native-youtube": "^2.0.2",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.1"
   },
   "private": true
 }
